--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,8 @@
     <head>
         <title>Hello!</title>
     </head>
-    <body>
+    <body style="background-color: black; color: lightcoral">
+        <h1>Welcome!</h1>
         Hello world
     </body>
 </html>
