--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body style="background-color: black; color: lightcoral">
         <h1>Welcome!</h1>
-        <h2>Good to see yuo here</2>
+        <h2>Good to see you here</h2>
         Hello world
     </body>
 </html>
