--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title>Hello!</title>
     </head>
     <body style="background-color: black; color: lightcoral">
-        <h1>Welcome!</h1>
-        <h2 style="color:purple">Good to see you here</h2>
+        <h1 style="color:purple">Welcome!</h1>
+        <h2>Good to see you here</h2>
         Hello world
     </body>
 </html>
